// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component : Modal Snapshot : not visible 1`] = `
<DocumentFragment>
  <div
    data-testid="target-id"
    id="target-id"
  >
    <div
      class="sc-pscky sc-qQYBZ eQsgEe"
    >
      <div
        class="sc-pscky sc-qZtCU idntAh"
      >
        modal content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Component : Modal Snapshot : visible 1`] = `
<DocumentFragment>
  <div
    data-testid="target-id"
    id="target-id"
  >
    <div
      class="sc-pscky sc-qQYBZ csPywb"
    >
      <div
        class="sc-pscky sc-qZtCU ccMERE"
      >
        modal content
      </div>
    </div>
  </div>
</DocumentFragment>
`;
